añadidos ejercicios objetos nativos completo

--- a/ENTORNO - CLIENTE/JAVASCRIPT/ACTIVIDADES OBJETOS NATIVOS/actividad6/actividad6.css
+++ b/ENTORNO - CLIENTE/JAVASCRIPT/ACTIVIDADES OBJETOS NATIVOS/actividad6/actividad6.css
@@ -19,6 +19,11 @@ img {
   height: 300px;
 }
 #intro,
-#opcion {
+#opcion,
+#historial {
   text-align: center;
+}
+
+#historial {
+  margin-top: 10px;
 }
